# YOLOv8-with-TensorRT

./: .gitignore  CMakeLists.txt  README.md  main.cpp
configs/: lice-det.yaml
include/: common.h  filter.h  fish_seg.h  lice_det.h  logger.h
include/yolov8/: common.hpp  yolov8-seg.h  yolov8.h
src/: filter.cpp  fish_seg.cpp  lice_det.cpp  yolov8-seg.cpp  yolov8.cpp
